Fix overflow in my works images

--- a/index.scss
+++ b/index.scss
@@ -85,7 +85,8 @@ main {
   margin-bottom: 20px;
   background-color: whitesmoke;
   img {
-    width: 270px;
+    width: 100%;
+    height: 380px;
     object-fit: cover;
   }
   .project-details {
